fix(design): stats bar count is not visible when `width < 1 rem`

--- a/styles/index.css
+++ b/styles/index.css
@@ -671,6 +671,7 @@ details {
   .yellow,
   .red {
     color: rgb(var(--color-black));
+    min-width: fit-content;
     padding: .5rem;
     transition: all .2s ease-in-out;
   }
